--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -50,7 +50,6 @@ Vagrant.configure("2") do |config|
         bridge: "wlp8s0"
       master.vm.hostname="master"
       master.vm.synced_folder "/mnt/vmount/data/master", "/vagrant_data"
-
      end
 
      config.vm.define "worker" do |worker|
@@ -60,7 +59,7 @@ Vagrant.configure("2") do |config|
          ip: "192.168.0.21",
          bridge: "wlp8s0"
        worker.vm.hostname="worker"
-       worker.vm.synced_folder "/mnt/vmount/data/worker-1", "/vagrant_data"
+       worker.vm.synced_folder "/mnt/vmount/data/worker", "/vagrant_data"
 
      end
 
@@ -92,8 +91,7 @@ Vagrant.configure("2") do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
+  config.vm.provision "shell", inline: <<-SHELL
+      sudo swapoff -a 
+  SHELL
 end
