--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -50,6 +50,13 @@ Vagrant.configure("2") do |config|
         bridge: "wlp8s0"
       master.vm.hostname="master"
       master.vm.synced_folder "/mnt/vmount/data/master", "/vagrant_data"
+# Provider-specific configuration so you can fine-tune various
+# backing providers for Vagrant. These expose provider-specific options.
+      master.vm.provider "virtualbox" do |mvb|
+         mvb.memory = "3072"
+         mvb.cpus = "2"
+      end
+
      end
 
      config.vm.define "worker" do |worker|
@@ -60,7 +67,11 @@ Vagrant.configure("2") do |config|
          bridge: "wlp8s0"
        worker.vm.hostname="worker"
        worker.vm.synced_folder "/mnt/vmount/data/worker", "/vagrant_data"
-
+       worker.vm.network "forwarded_port", guest: 10250, host: 10250
+       worker.vm.provider "virtualbox" do |wvb|
+          wvb.memory = "2048"
+          wvb.cpus = "2"
+       end
      end
 
 
@@ -70,20 +81,6 @@ Vagrant.configure("2") do |config|
   # argument is a set of non-required options.
 
 
-
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-  # Example for VirtualBox:
-  #
-  config.vm.provider "virtualbox" do |vb|
-  #   # Display the VirtualBox GUI when booting the machine
-  #   vb.gui = true
-  #
-  #   # Customize the amount of memory on the VM:
-  vb.memory = "2048"
-  vb.cpus = "2"
-
-  end
   #
   # View the documentation for the provider you are using for more
   # information on available options.
@@ -92,6 +89,7 @@ Vagrant.configure("2") do |config|
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-SHELL
-      sudo swapoff -a 
+      sed -i '/swap/d' /etc/fstab
+      sudo swapoff -a
   SHELL
 end
