--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -52,9 +52,14 @@ Vagrant.configure("2") do |config|
       master.vm.synced_folder "/mnt/vmount/data/master", "/vagrant_data"
 # Provider-specific configuration so you can fine-tune various
 # backing providers for Vagrant. These expose provider-specific options.
+      for i in 30000..32767
+          master.vm.network :forwarded_port, guest: i, host: i
+      end
+      master.vm.network "forwarded_port", guest: 6443, host: 6443
+
       master.vm.provider "virtualbox" do |mvb|
-         mvb.memory = "3072"
-         mvb.cpus = "2"
+         mvb.memory = "4096"
+         mvb.cpus = "3"
       end
 
      end
@@ -68,9 +73,16 @@ Vagrant.configure("2") do |config|
        worker.vm.hostname="worker"
        worker.vm.synced_folder "/mnt/vmount/data/worker", "/vagrant_data"
        worker.vm.network "forwarded_port", guest: 10250, host: 10250
+       ## exporting all node port, while its not mandatory
+       ## components like service mesh & ingress conmtroller use external
+       ## load balancers, as we wont have this option nodeport is a alternate
+       for i in 30000..32767
+           worker.vm.network :forwarded_port, guest: i, host: i
+       end
+
        worker.vm.provider "virtualbox" do |wvb|
-          wvb.memory = "2048"
-          wvb.cpus = "2"
+          wvb.memory = "4096"
+          wvb.cpus = "3"
        end
      end
 
